--- a/CreateTokenCSV.ipynb
+++ b/CreateTokenCSV.ipynb
@@ -55,6 +55,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>book_num</th>\n",
        "      <th>title</th>\n",
        "      <th>author</th>\n",
        "      <th>year</th>\n",
@@ -68,6 +69,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>Hunger Games</td>\n",
        "      <td>Collins</td>\n",
        "      <td>2008</td>\n",
@@ -75,10 +77,11 @@
        "      <td>black</td>\n",
        "      <td>Collins_HungerGames</td>\n",
        "      <td>Books/Collins_HungerGames.txt</td>\n",
-       "      <td>542639</td>\n",
+       "      <td>543533</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>Catching Fire</td>\n",
        "      <td>Collins</td>\n",
        "      <td>2009</td>\n",
@@ -86,10 +89,11 @@
        "      <td>red</td>\n",
        "      <td>Collins_CatchingFire</td>\n",
        "      <td>Books/Collins_CatchingFire.txt</td>\n",
-       "      <td>649248</td>\n",
+       "      <td>650245</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>Mockingjay</td>\n",
        "      <td>Collins</td>\n",
        "      <td>2010</td>\n",
@@ -97,10 +101,11 @@
        "      <td>blue</td>\n",
        "      <td>Collins_Mockingjay</td>\n",
        "      <td>Books/Collins_Mockingjay.txt</td>\n",
-       "      <td>561779</td>\n",
+       "      <td>562696</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>Divergent</td>\n",
        "      <td>Roth</td>\n",
        "      <td>2011</td>\n",
@@ -108,10 +113,11 @@
        "      <td>blue</td>\n",
        "      <td>Roth_Divergent</td>\n",
        "      <td>Books/Roth_Divergent.txt</td>\n",
-       "      <td>663128</td>\n",
+       "      <td>664476</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>Insurgent</td>\n",
        "      <td>Roth</td>\n",
        "      <td>2012</td>\n",
@@ -119,10 +125,11 @@
        "      <td>green</td>\n",
        "      <td>Roth_Insurgent</td>\n",
        "      <td>Books/Roth_Insurgent.txt</td>\n",
-       "      <td>578407</td>\n",
+       "      <td>579698</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>5</td>\n",
        "      <td>Allegiant</td>\n",
        "      <td>Roth</td>\n",
        "      <td>2013</td>\n",
@@ -130,28 +137,28 @@
        "      <td>red</td>\n",
        "      <td>Roth_Allegiant</td>\n",
        "      <td>Books/Roth_Allegiant.txt</td>\n",
-       "      <td>603333</td>\n",
+       "      <td>604651</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           title   author  year      genre cover color                  file  \\\n",
-       "0   Hunger Games  Collins  2008  adventure       black   Collins_HungerGames   \n",
-       "1  Catching Fire  Collins  2009  dystopian         red  Collins_CatchingFire   \n",
-       "2     Mockingjay  Collins  2010  adventure        blue    Collins_Mockingjay   \n",
-       "3      Divergent     Roth  2011  dystopian        blue        Roth_Divergent   \n",
-       "4      Insurgent     Roth  2012    romance       green        Roth_Insurgent   \n",
-       "5      Allegiant     Roth  2013    romance         red        Roth_Allegiant   \n",
+       "   book_num          title   author  year      genre cover color  \\\n",
+       "0         0   Hunger Games  Collins  2008  adventure       black   \n",
+       "1         1  Catching Fire  Collins  2009  dystopian         red   \n",
+       "2         2     Mockingjay  Collins  2010  adventure        blue   \n",
+       "3         3      Divergent     Roth  2011  dystopian        blue   \n",
+       "4         4      Insurgent     Roth  2012    romance       green   \n",
+       "5         5      Allegiant     Roth  2013    romance         red   \n",
        "\n",
-       "                          txt_str  n_char  \n",
-       "0   Books/Collins_HungerGames.txt  542639  \n",
-       "1  Books/Collins_CatchingFire.txt  649248  \n",
-       "2    Books/Collins_Mockingjay.txt  561779  \n",
-       "3        Books/Roth_Divergent.txt  663128  \n",
-       "4        Books/Roth_Insurgent.txt  578407  \n",
-       "5        Books/Roth_Allegiant.txt  603333  "
+       "                   file                         txt_str  n_char  \n",
+       "0   Collins_HungerGames   Books/Collins_HungerGames.txt  543533  \n",
+       "1  Collins_CatchingFire  Books/Collins_CatchingFire.txt  650245  \n",
+       "2    Collins_Mockingjay    Books/Collins_Mockingjay.txt  562696  \n",
+       "3        Roth_Divergent        Books/Roth_Divergent.txt  664476  \n",
+       "4        Roth_Insurgent        Books/Roth_Insurgent.txt  579698  \n",
+       "5        Roth_Allegiant        Books/Roth_Allegiant.txt  604651  "
       ]
      },
      "execution_count": 3,
@@ -381,7 +388,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>643782 rows × 4 columns</p>\n",
+       "<p>643777 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -413,7 +420,7 @@
        "                                    2                DT  \n",
        "                                    3                JJ  \n",
        "\n",
-       "[643782 rows x 4 columns]"
+       "[643777 rows x 4 columns]"
       ]
      },
      "execution_count": 5,
