--- a/CreateLIB.ipynb
+++ b/CreateLIB.ipynb
@@ -22,7 +22,7 @@
    },
    "outputs": [],
    "source": [
-    "LIB = pd.DataFrame({'title':['Hunger Games', 'Catching Fire', 'Mockingjay', 'Divergent', 'Insurgent', 'Allegiant'],\n",
+    "LIB = pd.DataFrame({'book_num':[0,1,2,3,4,5], 'title':['Hunger Games', 'Catching Fire', 'Mockingjay', 'Divergent', 'Insurgent', 'Allegiant'],\n",
     "             'author':['Collins', 'Collins', 'Collins', 'Roth', 'Roth', 'Roth'],\n",
     "             'year': ['2008', '2009', '2010', '2011', '2012', '2013'],\n",
     "             'genre':['adventure', 'dystopian', 'adventure', 'dystopian', 'romance', 'romance'],\n",
@@ -58,6 +58,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>book_num</th>\n",
        "      <th>title</th>\n",
        "      <th>author</th>\n",
        "      <th>year</th>\n",
@@ -68,6 +69,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>Hunger Games</td>\n",
        "      <td>Collins</td>\n",
        "      <td>2008</td>\n",
@@ -76,6 +78,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>Catching Fire</td>\n",
        "      <td>Collins</td>\n",
        "      <td>2009</td>\n",
@@ -84,6 +87,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>Mockingjay</td>\n",
        "      <td>Collins</td>\n",
        "      <td>2010</td>\n",
@@ -92,6 +96,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>Divergent</td>\n",
        "      <td>Roth</td>\n",
        "      <td>2011</td>\n",
@@ -100,6 +105,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>Insurgent</td>\n",
        "      <td>Roth</td>\n",
        "      <td>2012</td>\n",
@@ -108,6 +114,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>5</td>\n",
        "      <td>Allegiant</td>\n",
        "      <td>Roth</td>\n",
        "      <td>2013</td>\n",
@@ -119,13 +126,13 @@
        "</div>"
       ],
       "text/plain": [
-       "           title   author  year      genre cover color\n",
-       "0   Hunger Games  Collins  2008  adventure       black\n",
-       "1  Catching Fire  Collins  2009  dystopian         red\n",
-       "2     Mockingjay  Collins  2010  adventure        blue\n",
-       "3      Divergent     Roth  2011  dystopian        blue\n",
-       "4      Insurgent     Roth  2012    romance       green\n",
-       "5      Allegiant     Roth  2013    romance         red"
+       "   book_num          title   author  year      genre cover color\n",
+       "0         0   Hunger Games  Collins  2008  adventure       black\n",
+       "1         1  Catching Fire  Collins  2009  dystopian         red\n",
+       "2         2     Mockingjay  Collins  2010  adventure        blue\n",
+       "3         3      Divergent     Roth  2011  dystopian        blue\n",
+       "4         4      Insurgent     Roth  2012    romance       green\n",
+       "5         5      Allegiant     Roth  2013    romance         red"
       ]
      },
      "execution_count": 3,
@@ -190,6 +197,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>book_num</th>\n",
        "      <th>title</th>\n",
        "      <th>author</th>\n",
        "      <th>year</th>\n",
@@ -202,6 +210,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>Hunger Games</td>\n",
        "      <td>Collins</td>\n",
        "      <td>2008</td>\n",
@@ -212,6 +221,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>Catching Fire</td>\n",
        "      <td>Collins</td>\n",
        "      <td>2009</td>\n",
@@ -222,6 +232,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>Mockingjay</td>\n",
        "      <td>Collins</td>\n",
        "      <td>2010</td>\n",
@@ -232,6 +243,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>Divergent</td>\n",
        "      <td>Roth</td>\n",
        "      <td>2011</td>\n",
@@ -242,6 +254,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>Insurgent</td>\n",
        "      <td>Roth</td>\n",
        "      <td>2012</td>\n",
@@ -252,6 +265,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>5</td>\n",
        "      <td>Allegiant</td>\n",
        "      <td>Roth</td>\n",
        "      <td>2013</td>\n",
@@ -265,21 +279,21 @@
        "</div>"
       ],
       "text/plain": [
-       "           title   author  year      genre cover color                  file  \\\n",
-       "0   Hunger Games  Collins  2008  adventure       black   Collins_HungerGames   \n",
-       "1  Catching Fire  Collins  2009  dystopian         red  Collins_CatchingFire   \n",
-       "2     Mockingjay  Collins  2010  adventure        blue    Collins_Mockingjay   \n",
-       "3      Divergent     Roth  2011  dystopian        blue        Roth_Divergent   \n",
-       "4      Insurgent     Roth  2012    romance       green        Roth_Insurgent   \n",
-       "5      Allegiant     Roth  2013    romance         red        Roth_Allegiant   \n",
+       "   book_num          title   author  year      genre cover color  \\\n",
+       "0         0   Hunger Games  Collins  2008  adventure       black   \n",
+       "1         1  Catching Fire  Collins  2009  dystopian         red   \n",
+       "2         2     Mockingjay  Collins  2010  adventure        blue   \n",
+       "3         3      Divergent     Roth  2011  dystopian        blue   \n",
+       "4         4      Insurgent     Roth  2012    romance       green   \n",
+       "5         5      Allegiant     Roth  2013    romance         red   \n",
        "\n",
-       "                          txt_str  \n",
-       "0   Books/Collins_HungerGames.txt  \n",
-       "1  Books/Collins_CatchingFire.txt  \n",
-       "2    Books/Collins_Mockingjay.txt  \n",
-       "3        Books/Roth_Divergent.txt  \n",
-       "4        Books/Roth_Insurgent.txt  \n",
-       "5        Books/Roth_Allegiant.txt  "
+       "                   file                         txt_str  \n",
+       "0   Collins_HungerGames   Books/Collins_HungerGames.txt  \n",
+       "1  Collins_CatchingFire  Books/Collins_CatchingFire.txt  \n",
+       "2    Collins_Mockingjay    Books/Collins_Mockingjay.txt  \n",
+       "3        Roth_Divergent        Books/Roth_Divergent.txt  \n",
+       "4        Roth_Insurgent        Books/Roth_Insurgent.txt  \n",
+       "5        Roth_Allegiant        Books/Roth_Allegiant.txt  "
       ]
      },
      "execution_count": 6,
@@ -348,6 +362,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>book_num</th>\n",
        "      <th>title</th>\n",
        "      <th>author</th>\n",
        "      <th>year</th>\n",
@@ -361,6 +376,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>Hunger Games</td>\n",
        "      <td>Collins</td>\n",
        "      <td>2008</td>\n",
@@ -368,10 +384,11 @@
        "      <td>black</td>\n",
        "      <td>Collins_HungerGames</td>\n",
        "      <td>Books/Collins_HungerGames.txt</td>\n",
-       "      <td>542639</td>\n",
+       "      <td>543533</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>Catching Fire</td>\n",
        "      <td>Collins</td>\n",
        "      <td>2009</td>\n",
@@ -379,10 +396,11 @@
        "      <td>red</td>\n",
        "      <td>Collins_CatchingFire</td>\n",
        "      <td>Books/Collins_CatchingFire.txt</td>\n",
-       "      <td>649248</td>\n",
+       "      <td>650245</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>Mockingjay</td>\n",
        "      <td>Collins</td>\n",
        "      <td>2010</td>\n",
@@ -390,10 +408,11 @@
        "      <td>blue</td>\n",
        "      <td>Collins_Mockingjay</td>\n",
        "      <td>Books/Collins_Mockingjay.txt</td>\n",
-       "      <td>561779</td>\n",
+       "      <td>562696</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>Divergent</td>\n",
        "      <td>Roth</td>\n",
        "      <td>2011</td>\n",
@@ -401,10 +420,11 @@
        "      <td>blue</td>\n",
        "      <td>Roth_Divergent</td>\n",
        "      <td>Books/Roth_Divergent.txt</td>\n",
-       "      <td>663128</td>\n",
+       "      <td>664476</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>Insurgent</td>\n",
        "      <td>Roth</td>\n",
        "      <td>2012</td>\n",
@@ -412,10 +432,11 @@
        "      <td>green</td>\n",
        "      <td>Roth_Insurgent</td>\n",
        "      <td>Books/Roth_Insurgent.txt</td>\n",
-       "      <td>578407</td>\n",
+       "      <td>579698</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>5</td>\n",
        "      <td>Allegiant</td>\n",
        "      <td>Roth</td>\n",
        "      <td>2013</td>\n",
@@ -423,28 +444,28 @@
        "      <td>red</td>\n",
        "      <td>Roth_Allegiant</td>\n",
        "      <td>Books/Roth_Allegiant.txt</td>\n",
-       "      <td>603333</td>\n",
+       "      <td>604651</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           title   author  year      genre cover color                  file  \\\n",
-       "0   Hunger Games  Collins  2008  adventure       black   Collins_HungerGames   \n",
-       "1  Catching Fire  Collins  2009  dystopian         red  Collins_CatchingFire   \n",
-       "2     Mockingjay  Collins  2010  adventure        blue    Collins_Mockingjay   \n",
-       "3      Divergent     Roth  2011  dystopian        blue        Roth_Divergent   \n",
-       "4      Insurgent     Roth  2012    romance       green        Roth_Insurgent   \n",
-       "5      Allegiant     Roth  2013    romance         red        Roth_Allegiant   \n",
+       "   book_num          title   author  year      genre cover color  \\\n",
+       "0         0   Hunger Games  Collins  2008  adventure       black   \n",
+       "1         1  Catching Fire  Collins  2009  dystopian         red   \n",
+       "2         2     Mockingjay  Collins  2010  adventure        blue   \n",
+       "3         3      Divergent     Roth  2011  dystopian        blue   \n",
+       "4         4      Insurgent     Roth  2012    romance       green   \n",
+       "5         5      Allegiant     Roth  2013    romance         red   \n",
        "\n",
-       "                          txt_str  n_char  \n",
-       "0   Books/Collins_HungerGames.txt  542639  \n",
-       "1  Books/Collins_CatchingFire.txt  649248  \n",
-       "2    Books/Collins_Mockingjay.txt  561779  \n",
-       "3        Books/Roth_Divergent.txt  663128  \n",
-       "4        Books/Roth_Insurgent.txt  578407  \n",
-       "5        Books/Roth_Allegiant.txt  603333  "
+       "                   file                         txt_str  n_char  \n",
+       "0   Collins_HungerGames   Books/Collins_HungerGames.txt  543533  \n",
+       "1  Collins_CatchingFire  Books/Collins_CatchingFire.txt  650245  \n",
+       "2    Collins_Mockingjay    Books/Collins_Mockingjay.txt  562696  \n",
+       "3        Roth_Divergent        Books/Roth_Divergent.txt  664476  \n",
+       "4        Roth_Insurgent        Books/Roth_Insurgent.txt  579698  \n",
+       "5        Roth_Allegiant        Books/Roth_Allegiant.txt  604651  "
       ]
      },
      "execution_count": 9,
@@ -467,7 +488,7 @@
     {
      "data": {
       "text/plain": [
-       "599755.6666666666"
+       "600883.1666666666"
       ]
      },
      "execution_count": 10,
@@ -490,8 +511,8 @@
     {
      "data": {
       "text/plain": [
-       "Index(['title', 'author', 'year', 'genre', 'cover color', 'file', 'txt_str',\n",
-       "       'n_char'],\n",
+       "Index(['book_num', 'title', 'author', 'year', 'genre', 'cover color', 'file',\n",
+       "       'txt_str', 'n_char'],\n",
        "      dtype='object')"
       ]
      },
